--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
@@ -10,6 +10,7 @@
 <br/><br/>
 
 <div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h1 class="display-4">Space Adventures</h1>
     <h2>Customers</h2>
 </div>
 
