--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
@@ -65,4 +65,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
+    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/js/roles.js"></script>
 }
