--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
@@ -14,17 +14,6 @@
     <h2>Customers</h2>
 </div>
 
-
-@if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
-{
-    <p><a class="btn btn-outline-info btn-sm disabled" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Customer</a></p>
-}
-else
-{
-    <p><a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Customer</a></p>
-}
-
-
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
     <tr>
@@ -58,15 +47,15 @@ else
     @if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
     {
         <td>
-            <a class="btn btn-dark btn-sm disabled" asp-route-id="@item.IdClient"><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm disabled" asp-route-id="@item.IdClient"><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm disabled"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm disabled"><i class="fa-solid fa-trash m-2"></i></a>
         </td>
     }
     else
     {
         <td>
-            <a class="btn btn-dark btn-sm" asp-route-id="@item.IdClient"><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm" asp-route-id="@item.IdClient"><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm udrconst"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm udrconst"><i class="fa-solid fa-trash m-2"></i></a>
         </td>
     }
         </tr>
@@ -82,4 +71,8 @@ else
     <script src ="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src ="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src ="~/js/datatable.js"></script>
+
+     <script src="~/lib/toastr.js/toastr.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/toast-underconstruction.js"></script>
 }
