--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
@@ -26,7 +26,7 @@
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-green order-card">
                 <div class="card-block">
-                    <h6 class="m-b-20">Aircraft</h6>
+                    <h6 class="m-b-20">Aircrafts</h6>
                     <h2 class="text-right">
                         <i class="fa-solid fa-rocket f-right m-2"></i><span id="aircraft"></span>
                     </h2>
@@ -38,7 +38,7 @@
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-yellow order-card">
                 <div class="card-block">
-                    <h6 class="m-b-20">Booking</h6>
+                    <h6 class="m-b-20">Bookings</h6>
                     <h2 class="text-right">
                         <i class="fa fa-cart-shopping f-right m-2"></i><span id="bookings"></span>
                     </h2>
@@ -82,7 +82,7 @@
                         <span class="badge bg-secondary">30/06/2022</span>
                     </div>
                     <div class="col-sm-3 text-lg-end">
-                        <a asp-controller="" asp-action="" class="btn btn-dark stretched-link">Read more</a>
+                        <a class="btn btn-dark stretched-link udrconst">Read more</a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                         <span class="badge bg-secondary">31/07/2022</span>
                     </div>
                     <div class="col-sm-3 text-lg-end">
-                        <a asp-controller="" asp-action="" class="btn btn-success stretched-link">Read more</a>
+                        <a  class="btn btn-success stretched-link udrconst">Read more</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                         <span class="badge bg-secondary">20/06/2022</span>
                     </div>
                     <div class="col-sm-3 text-lg-end">
-                        <a asp-controller="" asp-action="" class="btn btn-primary stretched-link">Read more</a>
+                        <a  class="btn btn-primary stretched-link udrconst">Read more</a>
                     </div>
                 </div>
             </div>
@@ -139,4 +139,11 @@
 
 @section Scripts {
     <script src="~/js/dashboard.js"></script>
+    <script src="~/lib/toastr.js/toastr.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/toast-underconstruction.js"></script>
+        
+   
+    
+    
 }
