--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/DeleteUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/DeleteUser.cshtml
@@ -4,14 +4,18 @@
     ViewData["Title"] = "DeleteUser";
 }
 
-<h1>DeleteUser</h1>
+<<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h1 class="display-4">Space Adventures</h1>
+    <h2>Delete a user</h2>
+</div>
 
-<h3 class="text-white">Are you sure you want to delete this?</h3>
-<hr />
+<h3 class="text-white mt-5">Are you sure you want to delete this?</h3>
 
-<div>
+
+
+<div class="mt-4" >
     
-    <dl class="row">
+    <dl class="row border rounded px-2 " style="background-color:rgba(255,255,255,0.6)">
         <dt class = "col-sm-2 d-none">
             @Html.DisplayNameFor(model => model.IdUser)
         </dt>
@@ -45,7 +49,7 @@
     </dl>
     
     <form asp-action="DeleteUser" asp-route-id=@Model.IdUser>
-        <input type="submit" value="Delete" class="btn btn-danger" /> | <a asp-action="GetAllUsers">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger ml-2" />  <a class="btn btn-info" asp-action="GetAllUsers">Back to List</a>
         
     </form>
 </div>
