--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="form-group mt-3 text-center">
+    <div class="form-group mt-3 text-end">
         <input type="submit" value="Update" class="btn btn-dark m-2" /> 
         <a class="btn btn-info" asp-action="GetAllUsers">Back to List</a>
     </div>
