--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/SolarSystem.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/SolarSystem.cshtml
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 
 
-<body class="opening hide-UI view-2D zoom-large data-close controls-close">
+<body class="opening hide-UI view-2D zoom-large data-close controls-close bg">
 <div id="navbar">
     <a id="toggle-data" href="#data"><i class="icon-data"></i>Planets</a>
     <h1> Space Adventures - 3D Solar System<br><span>by <a href="#" target="_blank"></a>Antoine, Corentin and Hammadi</span></h1>
