--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Index.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Index.cshtml
@@ -2,5 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<div class="animated-title">
+    <div class="text-top">
+        <div>
+            <span>Space</span>
+            <span>Adventures</span>
+        </div>
+    </div>
+    <div class="text-bottom">
+        <div>Welcome To Our World</div>
+    </div>
+</div>
 
