--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="neubar">
     <div class="container">
-        <a><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
+        <a id="" ><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -181,6 +181,7 @@
 
 @*Start Carousel*@
 
+
 @*End Carousel*@
 
 <div class="container">
@@ -191,7 +192,7 @@
 
 <footer class="footer position-fixed text-center">
     <div class="container">
-        &copy; Projet WEB | EPHEC 2021 - 2022 | By Antoine HALLET - Corention DECONNINCK - Hammadi CHADLI <a asp-area="" asp-controller="" asp-action=""></a>
+        &copy; Projet WEB | EPHEC 2021 - 2022 | By Antoine HALLET - Corention DECONNINCK - Hammadi CHADLI
     </div>
 </footer>
 </body>
@@ -203,7 +204,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/js/toast-notifications.js" asp-append-version="true"></script>
-<script src="~/js/carousel.js" ></script>
+
 
 
 @await RenderSectionAsync("Scripts", false)
