--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/NavBar.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/NavBar.css
@@ -1,5 +1,7 @@
 ﻿/*****************New NavBar*****************/
 
+@import url('https://fonts.googleapis.com/css2?family=Bigshot+One&display=swap');
+
 #neubar {
     background: #fae8d2;
     box-shadow: 4px 6px 12px rgba(0, 0, 0, 0.4)
@@ -9,6 +11,10 @@
     background: linear-gradient(145deg, #ffe7ca, #f5d7b2);
     border-radius: 6px;
     box-shadow: 4px 4px 8px #ddc1a0, -4px -4px 8px #f7e5cc;
+}
+
+.nav-item {
+    font-family: 'Bigshot One', cursive;
 }
 
 #neubar .dropdown-menu a:hover { color: #454545 }
@@ -23,3 +29,8 @@
 #neubar .dropdown-menu { background: whitesmoke }
 
 a.navbar-brand { color: #454545 }
+
+#logo {
+    font-family: 'Bigshot One', cursive;
+    font-size: 1.7em
+}
