--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bigshot+One&display=swap');
 
 
 #myHeader { font-family: 'Rubik Glitch', cursive; }
@@ -41,12 +42,11 @@ body { margin-bottom: 60px; }
 
 .footer {
     background-color: #ddc1a0;
-    bottom: 0;
     color: black;
     line-height: 60px; /* Vertically center the text there */
-    position: absolute;
-    white-space: nowrap;
+    white-space: normal;
     width: 100%;
+    font-family: 'Bigshot One', cursive;
 }
 
 
@@ -77,93 +77,86 @@ body { margin-bottom: 60px; }
     width: 120px;
 }
 
+/****** Big Welcome Title CSS *******/
 
-/****** Carousel CSS *******/
 
-.carousel-fade .carousel-inner .item {
-    opacity: 0;
-    transition-property: opacity;
-}
-
-.carousel-fade .carousel-inner .active {
-    opacity: 1;
-}
-
-    .carousel-fade .carousel-inner .active.left,
-    .carousel-fade .carousel-inner .active.right {
-        left: 0;
-        opacity: 0;
-        z-index: 1;
+@keyframes showTopText {
+    0% {
+        transform: translate3d(0, 100%, 0);
     }
 
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-    opacity: 1;
-}
+    40%, 60% {
+        transform: translate3d(0, 50%, 0);
+    }
 
-.carousel-fade .carousel-control {
-    z-index: 2;
-}
-
-@media all and (transform-3d), (-webkit-transform-3d) {
-    .carousel-fade .carousel-inner > .item.next,
-    .carousel-fade .carousel-inner > .item.active.right {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 0, 0);
+    100% {
         transform: translate3d(0, 0, 0);
     }
+}
 
-    .carousel-fade .carousel-inner > .item.prev,
-    .carousel-fade .carousel-inner > .item.active.left {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 0, 0);
+@keyframes showBottomText {
+    0% {
+        transform: translate3d(0, -100%, 0);
+    }
+
+    100% {
         transform: translate3d(0, 0, 0);
     }
-
-        .carousel-fade .carousel-inner > .item.next.left,
-        .carousel-fade .carousel-inner > .item.prev.right,
-        .carousel-fade .carousel-inner > .item.active {
-            opacity: 1;
-            -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-        }
 }
 
-.carousel-caption {
-    text-shadow: 0 1px 4px rgba(0,0,0,.9);
-    font-size: 17px
+.animated-title {
+    color: #f7e5cc;
+    font-family: 'Rubik Glitch', cursive;
+    height: 90vmin;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 90vmin;
 }
 
-    .carousel-caption h3 {
-        font-size: 30px;
-        font-family: 'Lato', sans-serif;
+.animated-title > div {
+    height: 50%;
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+}
+
+.animated-title > div div {
+    font-size: 12vmin;
+    padding: 2vmin 0;
+    position: absolute;
+}
+
+.animated-title > div div span {
+    display: block;
+}
+
+    .animated-title > div.text-top {
+        border-bottom: 1vmin solid gray;
+        top: 0;
     }
 
-html,
-body,
-.carousel,
-.carousel-inner,
-.carousel-inner .item {
-    height: 100%;
+.animated-title > div.text-top div {
+    animation: showTopText 1s;
+    animation-delay: 0.8s;
+    animation-fill-mode: forwards;
+    bottom: 0;
+    transform: translate(0, 100%);
 }
 
-.item:nth-child(1) {
-    background: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/HZZKGVVJ6I.jpg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+    .animated-title > div.text-top div span:first-child {
+        color: #F1CDB5;
+    }
+
+.animated-title > div.text-bottom {
+    bottom: 0;
 }
 
-.item:nth-child(2) {
-    background: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/D2ROMCUEIV.jpg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-
-.item:nth-child(3) {
-    background: url('https://snap-photos.s3.amazonaws.com/img-thumbs/960w/PU9HHZB5QW.jpg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+.animated-title > div.text-bottom div {
+    animation: showBottomText 0.5s;
+    animation-delay: 1.75s;
+    animation-fill-mode: forwards;
+    top: 0;
+    transform: translate(0, -100%);
 }
