--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="neubar">
     <div class="container">
-        <a id="" ><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
+        <a id="logo" ><i class="fa-solid fa-shuttle-space m-2"></i> Space Adventures</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
