--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/NavBar.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/NavBar.css
@@ -1,6 +1,7 @@
 ﻿/*****************New NavBar*****************/
 
 @import url('https://fonts.googleapis.com/css2?family=Bigshot+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bigshot+One&display=swap');
 
 #neubar {
     background: #fae8d2;
