--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bigshot+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 #myHeader { font-family: 'Rubik Glitch', cursive; }
 
@@ -46,7 +45,7 @@ body { margin-bottom: 60px; }
     line-height: 60px; /* Vertically center the text there */
     white-space: normal;
     width: 100%;
-    font-family: 'Bigshot One', cursive;
+    font-family: 'Righteous', cursive;
 }
 
 
