--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
@@ -73,8 +73,9 @@
         <span asp-validation-for="IdRole" class="text-danger"></span>
     </div>
             
-    <div class="form-group m-2 text-center mt-5">
-        <input id="sign-up" type="submit" value="Sign Up" class="btn btn-info" /> | <a class="btn btn-dark  " asp-controller="Home" asp-action="Index">Home page</a>
+    
+    <div class="form-group mt-4 text-end">
+            <input id="sign-up" type="submit" value="Sign Up" class="btn btn-info m-3" /> <a class="btn btn-dark  " asp-controller="Home" asp-action="Index">Home page</a>
     </div>
 </form>
 
