--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
@@ -1,5 +1,4 @@
-﻿@model SpaceAdventures.MVC.Models.UserInput
-
+﻿@model SpaceAdventures.MVC.Models.User
 @{
     ViewData["Title"] = "UserSignUp";
 }
