--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/CreateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/CreateUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model SpaceAdventures.MVC.Models.UserInput
+﻿@model SpaceAdventures.MVC.Models.User
 
 @{
     ViewData["Title"] = "CreateUser";
@@ -67,6 +67,9 @@
                 <input type="submit" value="Create" class="btn btn-dark" /><a class="btn btn-info m-3" asp-action="GetAllUsers">Back to List</a>
             </div>
         </form>
+
+
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
         <script src="~/lib/toastr.js/toastr.min.js"></script>
