--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
@@ -1,4 +1,4 @@
-﻿@model SpaceAdventures.MVC.Models.BookingVm
+﻿@model SpaceAdventures.MVC.Models.Booking
 
 @{
     ViewData["Title"] = "CreateBooking";
@@ -38,14 +38,14 @@
             <span asp-validation-for="IdItinerary" class="text-danger"></span>
         </div>
         <div class="form-group col">
-            <label asp-for="IdFlight" class="control-label text-white"></label>
+            <label asp-for="IdFlight" class="control-label text-white"> Available Flights</label>
             @Html.DropDownListFor(x => Model.IdFlight, new SelectList(flightList, "Text", "Value"), htmlAttributes: new { @class = "form-control BiggerBox", id="IdFlight"})
             <span asp-validation-for="IdFlight" class="text-danger"></span>
         </div>
     </div>
     <div class="row mt-2">
         <div class="form-group col">
-            <label asp-for="NbSeats" class="control-label text-white BiggerBox"></label>
+            <label asp-for="NbSeats" class="control-label text-white BiggerBox">How many seats do you whish to book ?</label>
             <input asp-for="NbSeats" class="form-control" id="NbSeatsChange" />
             <span asp-validation-for="NbSeats" class="text-danger"></span>
         </div>
