--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetBookingsByClient.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetBookingsByClient.cshtml
@@ -17,6 +17,10 @@
         <tr>
             <th>Flight Id</th>
             <th>Number of seats</th>
+            <th> Planet of departure</th>
+            <th> Aiport of departure</th>
+            <th> Planet of arrival</th>
+            <th> Airport of arrival </th>
             <th>Action</th>
         </tr>
     </thead>
@@ -30,7 +34,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.NbSeats)
             </td>
-
+            <td>
+                @Html.DisplayFor(modelItem => item.planet1Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.airport1Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.planet2Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.airport2Name)
+            </td>
             <td>         
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })                
             </td>
