--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
@@ -7,6 +7,9 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
+
+<span id="message" class="d-none">@TempData["Message"]</span>
+
 <br/><br/><br/>
 
 <div id="myHeader" class="text-center mt-5 pt-5 text-white">
@@ -73,6 +76,10 @@ else
     <script src ="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src ="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src ="~/js/datatable.js"></script>
+
+    
+
+    
 }
 
                 
