--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetAllBookings.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetAllBookings.cshtml
@@ -6,9 +6,11 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
-<br/><br/>
+<br/><br/><br/><br/>
+
 
 <div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h1 class="display-4">Space Adventures</h1>
     <h2>Bookings</h2>
 </div>
 
