--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -177,11 +177,6 @@
 
 @*Navbar End*@
 
-@*Start Carousel*@
-
-
-@*End Carousel*@
-
 <div class="container">
     <main role="main" class="pb-3">
         @RenderBody()
@@ -190,7 +185,7 @@
 
 <footer class="footer position-fixed text-center">
     <div class="container">
-        &copy; Projet WEB | EPHEC 2021 - 2022 | By Antoine HALLET - Corention DECONNINCK - Hammadi CHADLI
+        &copy; Projet WEB | EPHEC 2021 - 2022 | By Antoine HALLET - Corentin DECONNINCK - Hammadi CHADLI
     </div>
 </footer>
 </body>
