--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
@@ -44,7 +44,7 @@ else
             <td>
                 @Html.DisplayFor(modelItem => item.Username)
             </td>
-            <td>
+            <td class="email">
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
@@ -76,10 +76,6 @@ else
     <script src ="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src ="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src ="~/js/datatable.js"></script>
-
-    
-
-    
 }
 
                 
