--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap');
 
 #myHeader { font-family: 'Rubik Glitch', cursive; }
 
@@ -29,7 +29,8 @@ body { margin-bottom: 60px; }
 
 #datatable {
     background-color: rgba(255, 255, 255, 0.5);
-    font-family: 'Righteous', cursive;
+    font-family: 'Nuosu SIL', serif;
+    font-size: 1.2em;
 }
 
 #datatable_filter { color: white }
@@ -40,9 +41,6 @@ body { margin-bottom: 60px; }
 
 .dataTableColumn { font-size: smaller }
 
-.email {
-    color: black;
-}
 
 /************Sticky Footer CSS ***************/
 
@@ -52,7 +50,8 @@ body { margin-bottom: 60px; }
     line-height: 60px; /* Vertically center the text there */
     white-space: normal;
     width: 100%;
-    font-family: 'Righteous', cursive;
+    font-family: 'Nuosu SIL', serif;
+    font-size: 1.2em;
 }
 
 
