List of User (Layout)

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Home/Dashboard.cshtml
@@ -9,7 +9,8 @@
 <br/><br/><br/><br/><br/><br/><br/><br/>
 
 
-<div class="container">
+<body class="bg" style="background-image: url('/backgrounds/background_2.jpg')">
+    <div class="container">
     <div class="row">
         <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card">
@@ -135,15 +136,14 @@
         </div>
     </div>
 </div>
+</body>
+
+
 
 
 @section Scripts {
-    <script src="~/js/dashboard.js"></script>
     <script src="~/lib/toastr.js/toastr.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/dashboard.js"></script>
     <script src="~/js/toast-underconstruction.js"></script>
-        
-   
-    
-    
 }
