--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 <span id="role" class="d-none">@ViewContext.HttpContext.Session.GetString("Role")</span>
 
-<body class="bg" style="background-image: url('/backgrounds/background_2.jpg')">
+<body class="bg">
 
 @*Navbar Start*@
 
