--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetBookingsByClient.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetBookingsByClient.cshtml
@@ -6,10 +6,11 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
-<br/><br/>
+<br/><br/><br/><br/>
 
 <div id="myHeader" class="text-center mt-5 pt-5 text-white">
-    <h2>Bookings</h2>
+    <h1 class="display-4">Space Adventures</h1>
+    <h2>My Bookings</h2>
 </div>
 
 <table id="datatable" class="table border rounded">
