--- a/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
+++ b/SpaceAdventures/SpaceAdventures.MVC/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
 
 #myHeader { font-family: 'Rubik Glitch', cursive; }
 
@@ -17,6 +17,7 @@ html {
 body { margin-bottom: 60px; }
 
 .bg {
+    background-image: url(/backgrounds/background_2.jpg);
     background-attachment: fixed;
     background-position: center center;
     background-repeat: no-repeat;
@@ -29,8 +30,8 @@ body { margin-bottom: 60px; }
 
 #datatable {
     background-color: rgba(255, 255, 255, 0.5);
-    font-family: 'Nuosu SIL', serif;
-    font-size: 1.2em;
+    font-family: 'Patua One', cursive;
+    font-size: 0.8em;
 }
 
 #datatable_filter { color: white }
@@ -50,7 +51,7 @@ body { margin-bottom: 60px; }
     line-height: 60px; /* Vertically center the text there */
     white-space: normal;
     width: 100%;
-    font-family: 'Nuosu SIL', serif;
+    font-family: 'Patua One', cursive;
     font-size: 1.2em;
 }
 
