Resizing Buttons (DataTables)

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
@@ -18,11 +18,11 @@
 
 @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
 {
-    <p><a class="btn btn-outline-info btn-sm disabled"> <i class="fa-solid fa-plus"></i> Add New Airport</a></p>
+    <p><a class="btn btn-outline-info btn-sm disabled"> <i class="fa-solid fa-plus fa-xs m-2"></i> Add New Airport</a></p>
 }
 else
 {
-    <p><a class="btn btn-outline-info btn-sm udrconst"> <i class="fa-solid fa-plus"></i> Add New Airport</a></p>
+    <p><a class="btn btn-outline-info btn-sm udrconst"> <i class="fa-solid fa-plus fa-xs m-2"></i> Add New Airport</a></p>
 }
 
 
