--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetAllBookings.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/GetAllBookings.cshtml
@@ -17,13 +17,13 @@
 <table id="datatable" class="table border rounded">
     <thead class ="dataTableColumn">
         <tr>
-            <th>Client name</th>
-            <th>Flight number</th>
-            <th>Number of seats</th>
-            <th> Planet of departure</th>
-            <th> Aiport of departure</th>
+            <th> Customer name</th>
+            <th> Flight number</th>
+            <th> Number of seats</th>
+            <th> Departure's Planet</th>
+            <th> Departure's Airport</th>
             <th> Planet of arrival</th>
-            <th> Airport of arrival </th>
+            <th> Destination's Airport</th>
             
         </tr>
     </thead>
