--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Aircrafts/GetAircrafts.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Aircrafts/GetAircrafts.cshtml
@@ -54,15 +54,15 @@ else
         @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
         {
             <td>
-                <a class="btn btn-dark btn-sm disabled"><i class="fa-solid fa-pen m-2"></i></a> |
-                <a class="btn btn-danger btn-sm disabled"><i class="fa-solid fa-trash m-2"></i></a>
+                <a class="btn btn-dark btn-sm disabled"><i class="fa-solid fa-pen m-2 fa-xs m-2"></i></a> |
+                <a class="btn btn-danger btn-sm disabled"><i class="fa-solid fa-trash m-2 fa-xs m-2"></i></a>
             </td>
         }
         else
         {
             <td>
-                <a class="btn btn-dark btn-sm udrconst" ><i class="fa-solid fa-pen m-2"></i></a> |
-                <a class="btn btn-danger btn-sm udrconst" ><i class="fa-solid fa-trash m-2"></i></a>
+                <a class="btn btn-dark btn-sm udrconst" ><i class="fa-solid fa-pen m-2 fa-xs m-2"></i></a> |
+                <a class="btn btn-danger btn-sm udrconst" ><i class="fa-solid fa-trash m-2 fa-xs m-2"></i></a>
             </td>
         }
         </tr>
