--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
@@ -47,15 +47,15 @@
     @if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
     {
         <td>
-            <a class="btn btn-dark btn-sm disabled"><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm disabled"><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm disabled"><i class="fa-solid fa-pen fa-xs m-2"></i></a> |
+            <a class="btn btn-danger btn-sm disabled"><i class="fa-solid fa-trash fa-xs m-2"></i></a>
         </td>
     }
     else
     {
         <td>
-            <a class="btn btn-dark btn-sm udrconst"><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm udrconst"><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm udrconst"><i class="fa-solid fa-pen fa-xs m-2"></i></a> |
+            <a class="btn btn-danger btn-sm udrconst"><i class="fa-solid fa-trash fa-xs m-2"></i></a>
         </td>
     }
         </tr>
