--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Itineraries/GetItineraries.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Itineraries/GetItineraries.cshtml
@@ -53,14 +53,14 @@ else
             
             @if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
             {
-                <td><a class="btn btn-dark btn-sm disabled" ><i class="fa-solid fa-pen m-2"></i></a> |
-                    <a class="btn btn-danger btn-sm disabled" ><i class="fa-solid fa-trash m-2"></i></a>
+                <td><a class="btn btn-dark btn-sm disabled" ><i class="fa-solid fa-pen m-2 fa-xs"></i></a> |
+                    <a class="btn btn-danger btn-sm disabled" ><i class="fa-solid fa-trash m-2 fa-xs"></i></a>
                 </td>
             }
             else
             {
-                <td><a class="btn btn-dark btn-sm udrconst"  ><i class="fa-solid fa-pen m-2"></i></a> |
-                    <a class="btn btn-danger btn-sm udrconst"  ><i class="fa-solid fa-trash m-2"></i></a>
+                <td><a class="btn btn-dark btn-sm udrconst"  ><i class="fa-solid fa-pen m-2 fa-xs"></i></a> |
+                    <a class="btn btn-danger btn-sm udrconst"  ><i class="fa-solid fa-trash m-2 fa-xs"></i></a>
                 </td>
             }
         </tr>
