--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
@@ -60,7 +60,7 @@
     </div>
 </form>
 
-<div class="text-center ratio ratio-1x1 mb-5">
+<div class="text-center ratio ratio-4x3">
     <video controls autoplay name="media"><source src="@ViewBag.video" type="video/mp4">Your browser does not support the video tag.</video>
 </div>
 
